// Licensed to the Apache Software Foundation (ASF) under one
// or more contributor license agreements.  See the NOTICE file
// distributed with this work for additional information
// regarding copyright ownership.  The ASF licenses this file
// to you under the Apache License, Version 2.0 (the
// "License"); you may not use this file except in compliance
// with the License.  You may obtain a copy of the License at
//
//   http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing,
// software distributed under the License is distributed on an
// "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
// KIND, either express or implied.  See the License for the
// specific language governing permissions and limitations
// under the License.

use crate::proto::LookupResponse;
use crate::rpc::frame::ReadError;

use crate::rpc::api_key::ApiKey;
use crate::rpc::api_version::ApiVersion;
use crate::rpc::frame::WriteError;
use crate::rpc::message::{ReadVersionedType, RequestBody, WriteVersionedType};
use crate::{impl_read_version_type, impl_write_version_type, proto};
use prost::Message;

use bytes::{Buf, BufMut};

pub struct LookupRequest {
    pub inner_request: proto::LookupRequest,
}

impl LookupRequest {
    pub fn new(
        table_id: i64,
        partition_id: Option<i64>,
        bucket_id: i32,
        keys: Vec<Vec<u8>>,
    ) -> Self {
        let bucket_req = proto::PbLookupReqForBucket {
            partition_id,
            bucket_id,
            key: keys,
        };

        let request = proto::LookupRequest {
            table_id,
            buckets_req: vec![bucket_req],
        };

        Self {
            inner_request: request,
        }
    }
}

impl RequestBody for LookupRequest {
    type ResponseBody = LookupResponse;

    const API_KEY: ApiKey = ApiKey::Lookup;

    const REQUEST_VERSION: ApiVersion = ApiVersion(0);
}

impl_write_version_type!(LookupRequest);
impl_read_version_type!(LookupResponse);
